<resources>

    <string name="app_name">Fisherman\'s assistant</string>
    <string name="search_hint">Елец. Липецкая обл.</string>
    <string name="graph_pressure">График изменения давления</string>
    <string name="weather_day">Прогноз на сегодня</string>
    <string name="weather_week">Прогноз на неделю</string>
    <string name="weather_provider">Данные от</string>
    <string name="pressure">Давление</string>
    <string name="pressure_change">Изменение давления</string>
    <string name="humidity">Влажность</string>
    <string name="cloudiness">Облачность</string>
    <string name="sunrise_sunset">Восход | Заход</string>
    <string name="search_location">Поиск местоположения…</string>
    <string name="day_or_month">Сутки | Месяц</string>

</resources>
